--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,34 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homework 10</title>
+    <title>Homework 11</title>
   </head>
   <body>
-    <!-- <input type="text" id="search-box" /> -->
-    <!-- <ul class="country-list"></ul> -->
-    <!-- <div class="country-info"></div> -->
+    <form class="search-form" id="search-form">
+      <input
+        type="text"
+        name="searchQuery"
+        autocomplete="off"
+        placeholder="Search images..."
+      />
+      <button type="submit" class="search">
+        <svg class="icon icon-search">
+          <use href="./img/icon.svg#search"></use>
+        </svg>
+        <!-- <svg class="icon icon-spinner is-hidden">
+          <use href="./img/icon.svg#spinner"></use>
+        </svg> -->
+      </button>
+    </form>
+
+    <div class="gallery">
+      <!-- Картки зображень -->
+    </div>
+
+    <button type="button" class="load-more">Load more</button>
+
+    <!-- <button class="btn-search" type="button">Search</button>
+    <button class="btn-loading" type="button">Loading</button> -->
 
     <script src="index.js" type="module"></script>
   </body>
