--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
         autocomplete="off"
         placeholder="Search images..."
       />
-      <button type="submit" class="search">
+      <button type="submit" class="let-search">
         <svg class="icon icon-search">
           <use href="./img/icon.svg#search"></use>
         </svg>
