--- a/src/index.html
+++ b/src/index.html
@@ -18,9 +18,9 @@
         <svg class="icon icon-search">
           <use href="./img/icon.svg#search"></use>
         </svg>
-        <!-- <svg class="icon icon-spinner is-hidden">
+        <svg class="icon icon-spinner is-hidden">
           <use href="./img/icon.svg#spinner"></use>
-        </svg> -->
+        </svg>
       </button>
     </form>
 
