--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,12 @@
       <!-- Картки зображень -->
     </div>
 
-    <button type="button" class="load-more">Load more</button>
+    <button type="button" class="load-more is-hidden">
+      <svg class="icon icon-spinner is-hidden">
+        <use href="./img/icon.svg#spinner"></use>
+      </svg>
+      <span>Load more</span>
+    </button>
 
     <script src="index.js" type="module"></script>
   </body>
