--- a/src/index.html
+++ b/src/index.html
@@ -15,11 +15,12 @@
         placeholder="Search images..."
       />
       <button type="submit" class="let-search">
-        <svg class="icon icon-search">
-          <use href="./img/icon.svg#search"></use>
-        </svg>
-        <svg class="icon icon-spinner is-hidden">
-          <use href="./img/icon.svg#spinner"></use>
+        <svg class="icon">
+          <use class="icon-search" href="./img/icon.svg#search"></use>
+          <use
+            class="icon-spinner is-hidden"
+            href="./img/icon.svg#spinner"
+          ></use>
         </svg>
       </button>
     </form>
