--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
         name="searchQuery"
         autocomplete="off"
         placeholder="Search images..."
+        autofocus
       />
       <button type="submit" class="let-search">
         <svg class="icon">
